Block CSS update
Adding const to the variables. Then key.classList.add will add the classList nothing more here. It is how we grab block.

--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -60,12 +60,15 @@
 
 <script>
   window.addEventListener('keydown', function(e) {
-    audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+    const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);  // added the above blocks idk 
     if (!audio) return;
 
     audio.currentTime = 0; // rewind to the start (To make it flow nicer)
 
     audio.play();
+    key.classList.add('playing');  // run css to the blocks
+
   })
 </script>
 
