--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -59,7 +59,8 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
-  window.addEventListener('keydown', function(e) {
+
+  function playsound(e) {
     const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
     const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);  // added the above blocks idk 
     if (!audio) return;
@@ -69,7 +70,16 @@
     audio.play();
     key.classList.add('playing');  // run css to the blocks
 
-  })
+    function removeTransition(e) {
+      if (e.propertyName != 'transform') return; // skip if it is not transform
+      this.classList.remove('playing');
+    }
+
+    const keys = document.querySelectorAll('.key');  // create a node list of events 
+    keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+  }
+  
+  window.addEventListener('keydown', playsound);
 </script>
 
 
